# talent-scope-cv-finder

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
agent/: agent.py  prompts.py  tools.py
chroma_db/: chroma.sqlite3
config/: settings.py
core/: embedder.py  parser.py  schemas.py
data/: mock_akhlak.json  mock_kpi.json
data/job_descriptions/: ai_ml_engineer.txt  data_analyst.txt  finance_controller.txt  hr_business_partner.txt  legal_counsel.txt  marketing_manager.txt  operations_supervisor.txt
ingestion/: chromadb_store.py  file_loader.py  pipeline.py
scripts/: generate_synthetic_data.py  run_ingestion.py  run_ingestion_new.py  scrape_job_descriptions.py
session/: store.py
tests/: conftest.py  test_agent.py  test_agent_quality.py  test_ingestion.py  test_nine_box.py  test_parser.py  test_schemas.py  test_store.py  test_tools.py
ui/: access_gate.py  browse_view.py  candidate_card.py  chat_panel.py  detail_panel.py  nine_box.py  sidebar.py
